@@ -10,13 +10,13 @@ Have a look at the example scripts under examples/ to get started. Tip: start wi
 
 The script examples/quick_and_dirty is about as minimal as it gets, other variants are more elaborate.
 
-Each script using the Module can also generate POD from the parameter specification (and from there, the world is open with possibilities;-).
+Each script using the module can also generate POD from the parameter specification (and from there, the world is open with possibilities;-).
 
 We don't want to repeat what can be reformatted programmatically, right?
 
 There is one normal executable program, scripts/paramorama, that is installed alongside the module(s). It is a tool to work with the configuration files for other programs and can come in handy indeed. You could consider it a poor-mans text data base, even, as it basically retrieves and stores values from self-describing human-readable text files.
 
-About the overly long module version, conceptually, this is standard dotted-decimal: major.minor.bugfix . It's just filled up to 3 digits for minor and bugfix, then the midle dot removed. It's safer with Perl that way.
+About the overly long module version, conceptually, this is standard dotted-decimal: major.minor.bugfix . It's just filled up to 3 digits for minor and bugfix, then the middle dot removed. It's safer with Perl that way.
 
 =head1 INSTALLATION
 
